实验代码：将xml的Android：text 改成tools:text

--- a/MyApplication/app/src/main/res/layout/activity_live_data.xml
+++ b/MyApplication/app/src/main/res/layout/activity_live_data.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:gravity="center"
-            android:text="sss"
+            tools:text="sss"
             android:textSize="22sp" />
     </LinearLayout>
 
